fix video on iphone

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -224,7 +224,7 @@
 	.video-area {
 		border: 10px solid #fff;
 		border-radius: 20px;
-		height: 250px;
+		/* height: 250px; */
 	}
 	.video-area::after {
 		top: -10px;
